--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   google_fonts: ^6.2.1
   marquee: ^2.2.3
   msh_checkbox: ^2.0.1
+  graphql_flutter: ^5.1.0
+
 
 dev_dependencies:
   flutter_test:
