--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   marquee: ^2.2.3
   msh_checkbox: ^2.0.1
   graphql_flutter: ^5.1.0
+  provider: ^6.0.0
+  shimmer: ^3.0.0
 
 
 dev_dependencies:
