--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: video_stream_clone
-description: "A new Flutter project."
+description: "Wanzami Mobile App"
 publish_to: 'none'
 version: 0.1.0
 
@@ -19,6 +19,7 @@ dependencies:
   graphql_flutter: ^5.1.0
   provider: ^6.0.0
   shimmer: ^3.0.0
+  cached_network_image: ^3.4.1
 
 
 dev_dependencies:
@@ -36,4 +37,4 @@ flutter:
     - assets/icons/
     - assets/images/
 
-  uses-material-design: true 
+  uses-material-design: true
